--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Angular Demo</title>
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
-    <script src="js/controllers.js">
-
-    </script>
+    <script src="js/controllers.js"></script>
   </head>
   <body>
     <div ng-controller = "MyController">
