--- a/index.html
+++ b/index.html
@@ -5,40 +5,15 @@
     <title>Angular Demo</title>
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
     <script type="text/javascript" src="lib/angular/angular.min.js"></script>
+    <script type="text/javascript" src="lib/angular/angular-route.min.js"></script>
+    <script type="text/javascript" src="lib/angular/angular-animate.min.js"></script>
+
+    <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
   </head>
   <body>
-    <div class="main" ng-controller = "MyController">
-      <div class="search">
-        <h1>Artist Directory</h1>
-        <label>search: </label>
-        <input ng-model="query" placeholder="Search for Artits" autofocus>
-        <label class="formgroup">by:
-        <select ng-model="artistOrder">
-          <option value="name">Name</option>
-          <option value="reknown">Reknown</option>
-        </select>
-        </label>
-        <label class="formgroup">
-          <input type="radio" ng-model="direction" name="direction" checked>
-          ascending
-        </label>
-        <label class="formgroup">
-          <input type="radio" ng-model="direction" name="direction" value="reverse">
-          descending
-        </label>
+    <div class="main" ng-view>
 
-
-      </div>
-      <ul class="artistlist">
-        <li class="artist cf" ng-repeat="item in artists | filter: query | orderBy: artistOrder:direction">
-          <img ng-src="" alt="" />
-          <div class="info">
-            <h2>{{item.name}}</h2>
-            <h3>{{item.reknown}}</h3>
-          </div>
-        </li>
-      </ul>
     </div>
   </body>
 </html>
